--- a/RobotCode/src/main/deploy/www/stripchart/stripchart.css
+++ b/RobotCode/src/main/deploy/www/stripchart/stripchart.css
@@ -14,7 +14,7 @@ signalListContainer{
     display: flex;
     flex-direction: column;
     flex-grow: 0;  
-    width:250px;
+    width:33vw;
     max-height:92vh;
     overflow-y: scroll;
 }
