--- a/RobotCode/src/main/deploy/www/stripchart/stripchart.css
+++ b/RobotCode/src/main/deploy/www/stripchart/stripchart.css
@@ -14,9 +14,10 @@ signalListContainer{
     display: flex;
     flex-direction: column;
     flex-grow: 0;  
-    width:33vw;
     max-height:92vh;
     overflow-y: scroll;
+    width:0%;
+    transition: .25s ease opacity,.25s ease width;
 }
 
 selectableSignalContainer{
